java 8 compatibility changes